adding css styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zoo Animals</title>
+  <link rel="stylesheet" href="style.css"
 </head>
 <body>
   <!-- Add a header for the page -->
@@ -15,21 +16,21 @@
       <li>Ollie</li>
       <li>Mona</li>
     </ul>
-    <a href="https://en.wikipedia.org/wiki/Bear">Bear Facts</a>
+    <p><a href="https://en.wikipedia.org/wiki/Bear">Bear Facts</a></p>
   <h2>Giraffes</h2>
     <img src="Giraffe.jpg" width="150" alt="Bear Image">
     <ul>
       <li>Frankie</li>
       <li>Coconut</li>
     </ul>
-    <a href="https://en.wikipedia.org/wiki/Giraffe">Giraffe Facts</a>
+    <p><a href="https://en.wikipedia.org/wiki/Giraffe">Giraffe Facts</a></p>
   <h2>Lions</h2>
     <img src="Lion.jpg" width="150" alt="Lion Image">
     <ul>
       <li>Mella</li>
       <li>Karl</li>
     </ul>
-    <a href="https://en.wikipedia.org/wiki/Lion">Lion Facts</a>
+    <p><a href="https://en.wikipedia.org/wiki/Lion">Lion Facts</a></p>
   <h2>Monkeys</h2>
     <img src="Monkey.jpg" width="150" alt="Monkey Image">
     <ul>
@@ -37,7 +38,7 @@
       <li>Earl</li>
       <li>Banana Pudding</li>
     </ul>
-    <a href="https://en.wikipedia.org/wiki/Monkey">Monkey Facts</a>
+    <p><a href="https://en.wikipedia.org/wiki/Monkey">Monkey Facts</a></p>
   <h2>Alligators</h2>
     <img src="Alligator.webp" width="150" alt="Alligator Image">
     <ul>
@@ -45,6 +46,6 @@
       <li>Aspen</li>
       <li>Mika</li>
     </ul>
-    <a href="https://en.wikipedia.org/wiki/Alligator">Alligator Facts</a>
+    <p><a href="https://en.wikipedia.org/wiki/Alligator">Alligator Facts</a></p>
 </body>
 </html>
